attempt to fix transformer + clientside transformer